# PyPHITS

./: README.md  README.org  document  pyproject.toml
.github/workflows/: draft-pdf.yml  python-stuff.yml
doc/pyphits/: index.html
docs/: index.html  valspec.html
ex/: ex1.py
paper/: paper.bib  paper.md
src/: base.py  bijtrans.py  cell.py  distribution.py  ex.py  material.py  misc.py  parameters.py  run_phits.py  source.py  surface.py  tally.py  test.py  transform.py  valspec.py
src/parse/: ex.inp  ex.py  ideas.py  parse.py  phits.lark
src/pyphits/: __init__.py  valspec.py
src/tests/: test.py
tests/: test.py  test_stuff.py
tests/tests/: test.py
