[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyphits"
version = "0.0.1"
authors = [
	{ name="Duncan Wilkie", email="dwilk14@lsu.edu"  },
]
description = "A Python porcelain for JAEA's Particle Heavy-Ion Transport Code System (PHITS)."
readme = "README.org"
requires-pthon = ">=3.7"
classifiers = [
	    "Programming Language :: Python :: 3",
	    "License :: OSI Approved :: GPL-3.0-only",
	    "Operating System :: OS Independent",
	    ]

[project.urls]
"Homepage" = "https://github.com/Antigravityd/PyPHITS"
# Documentation
"Bug Tracker" = "https://github.com/Antigravityd/PyPHITS/issues"

	    


